# LexFlow-Protocol

./: .gitignore  LICENSE  README.md  presentation_prompt.md  risk_evaluation.txt
backend/: .env.example  .gitignore  README.md  debug_test.py  migrate_pdf_to_file.py  pyproject.toml  requirements.txt  test_openai.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  approvals.py  audit.py  auth.py  contracts.py  judgments.py  notifications.py  obligations.py  rag.py  rbac.py  redline.py  signatures.py  users.py  versions.py  zk_proofs.py
backend/app/core/: __init__.py  config.py  database.py  logging_config.py  x402.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  blockchain_service.py  contract_parser.py  judgment_service.py  notification_service.py  obligation_service.py  rag_service.py  redline_service.py  signature_service.py  version_service.py  zk_verifier.py
backend/uploads/versions/: contract_1d1711db9b00_v2_911ef45a.txt
contracts/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  powersOfTau28_hez_final_10.ptau  verify_contract.sh
contracts/contracts/: LexFlowEscrow.sol  MockJPYC.sol
contracts/scripts/: deploy-mock-jpyc.ts  deploy.ts
documents/: BusinessAgencyAgreement.txt  企画書.md  要件定義書.md  要件定義書_v2.md  要件定義書_v3.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
zk-proofs/: .gitignore  README.md  package-lock.json  package.json
(+64 files in other folders)
